# AgentKit

./: .gitignore  AGENTS.md  CHANGELOG.md  GITHUB-SETUP.md  INSTALL-WITH-UV.md  INSTALL.md  QUICKSTART.md  README.md  START-HERE.md  plan-v0.3.0.md  pyproject.toml  spec-v0.3.0.md
.obsidian/: workspace.json
src/agentkit_cli/: __init__.py  __main__.py  check.py  config.py  init.py  state.py  upgrade.py
src/agentkit_cli/templates/: AGENTS-minimal.md  workflow-state.yaml
src/agentkit_cli/templates/commands/: skip.md  start.md  status.md
src/agentkit_cli/templates/phases/: constitution.md  implement.md  plan.md  specify.md  task.md
tests/: conftest.py  test_init_and_ideas.py  test_integration.py  test_state.py
