[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkit-cli"
version = "0.3.0"
description = "Creative idea development toolkit for AI agents - Auto-Orchestrated Workflow"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AgentKit Maintainers", email = "maintainers@agentkit.dev"},
]
keywords = ["ai", "agents", "idea-development", "creative-workflow", "specification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentkit = "agentkit_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/hgreene624/agentkit"
Documentation = "https://github.com/hgreene624/agentkit/docs"
Repository = "https://github.com/hgreene624/agentkit"
Issues = "https://github.com/hgreene624/agentkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentkit_cli"]
sources = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
